@@ -1,0 +1,42 @@
+# Copyright 2023 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+require allow_fortran_tests
+
+load_lib fortran.exp
+
+standard_testfile .f90
+
+set old_gdbflags $GDBFLAGS
+set GDBFLAGS [string map {"-readnow" ""} "$GDBFLAGS"]
+
+if {[prepare_for_testing ${testfile}.exp ${testfile} ${srcfile} {debug f90}]} {
+    return -1
+}
+
+gdb_test "info main" "simple" "info main prior to start"
+
+if ![fortran_runto_main] {
+    untested "could not run to main"
+    return -1
+}
+
+gdb_test "info main" "simple" "info main post start"
+
+set GDBFLAGS "$GDBFLAGS -readnow"
+clean_restart $testfile
+gdb_test "info main" "simple" "info main with readnow"
+
+set GDBFLAGS $old_gdbflags
