@@ -83,6 +83,9 @@ show always-read-ctf
   When off, CTF is only read if DWARF is not present.  When on, CTF is
   read regardless of whether DWARF is present.  Off by default.
 
+info main
+  Get main symbol to identify entry point into program.
+
 * New convenience function "$_shell", to execute a shell command and
   return the result.  This lets you run shell commands in expressions.
   Some examples:
